--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/layout_main"
     tools:context=".MainActivity">
 
     <fragment
@@ -28,7 +29,13 @@
             android:layout_height="wrap_content"
             android:text="Resolve"/>
 
+        <Button
+            android:id="@+id/shoot_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Shoot"/>
+
     </LinearLayout>
 
 
-</RelativeLayout>
+</FrameLayout>
