--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,12 @@
             android:layout_height="wrap_content"
             android:text="Shoot"/>
 
+        <Button
+            android:id="@+id/face_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Face"/>
+
     </LinearLayout>
 
 
