--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,14 @@
         android:id="@+id/sceneform_fragment"
         android:name="com.tosc.pkbg.ar.CustomArFragment" />
 
+    <ImageView
+        android:id="@+id/image_blood_frame"
+        android:alpha="0.5"
+        android:visibility="invisible"
+        android:src="@drawable/bloody_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
