--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,15 @@
     </LinearLayout>
 
     <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/headshot"
+        android:layout_gravity="center"
+        android:id="@+id/image_headshot"
+        android:visibility="gone"
+        />
+
+    <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/crosshair"
